# AIchemy

./: .gitignore  CLAUDE.md  DESIGN.md  DESIGN_PHILOSOPHY.md  ISSUES-0427.md  README.md  ROADMAP_V2.2.md  SDK.md  SPEC.md  SPECS.md  deploy-config.yaml  deploy-stubs.sh  deploy.sh  docker-compose.yml  mcp-config.json  package-lock.json  package.json  pnpm-lock.yaml  start-ws-stub.sh  state-v2.json  test_e2e.py  test_live.py  test_sleep.py
PROMPTS/: experiment-feature.md
backups/: state_1776968878015.json  state_1776969655867.json  state_1776970678028.json  state_1776971455875.json  state_1776973255886.json  state_1777036922405.json  state_1777041605187.json  state_1777043405194.json  state_1777048090716.json  state_1777061978451.json  (+5 more)
sdk/: USAGE.md  pyproject.toml
sdk/alchemy_sdk/: __init__.py  callbacks.py  client.py  context.py  experiment.py  experiments.py  ledger.py  managed.py  operator_config.py  preflight.py  submission_lint.py  submit.py  transport.py
sdk/alchemy_sdk/cli/: __init__.py  main.py
sdk/tests/: test_callbacks.py  test_cli.py  test_client.py  test_context.py  test_experiment_client.py  test_experiment_curves.py  test_experiment_grid.py  test_experiment_lineage.py  test_experiment_review_smoke.py  test_experiment_spec.py  test_experiment_submit_payload.py  test_gpu_metrics.py  test_ledger.py  test_operator_config.py  test_preflight.py  test_should_stop.py  test_transport.py
stub/: pyproject.toml  requirements.txt
stub/alchemy_stub/: __init__.py  __main__.py  config.py  daemon.py  disk_monitor.py  env_discover.py  error_classifier.py  exec.py  file_rpc.py  gpu_monitor.py  preflight.py  process_mgr.py  reliable.py  system_monitor.py  task_socket.py  warm_pool.py  warm_worker.py
stub/alchemy_stub/alchemy_stub/: __init__.py  __main__.py  config.py  daemon.py  error_classifier.py  gpu_monitor.py  log_setup.py  preflight.py  process_mgr.py  system_monitor.py  walltime.py  warm_worker.py
stub/tests/: conftest.py  test_cgroup_memory.py  test_daemon.py  test_death_classify.py  test_disk_monitor.py  test_env_config.py  test_error_classifier.py  test_error_classifier_realworld.py  test_file_rpc.py  test_log_cleanup.py  test_pre_validation.py  test_preflight.py  test_process_mgr.py  test_system_monitor.py  test_task_socket.py  test_utilization_smoothing.py
(+317 files in other folders)
